Deploy MkDocs to IIS - Debug Fixed V5

--- a/.github/workflows/deploy-mkdocs.yml
+++ b/.github/workflows/deploy-mkdocs.yml
@@ -1,4 +1,4 @@
-name: Deploy MkDocs to IIS - Debug Fixed V2
+name: Deploy MkDocs to IIS - Debug Fixed V3
 
 on:
   push:
@@ -35,14 +35,17 @@ jobs:
           Set-Location "${{ github.workspace }}"
           
           Write-Host "=== Testing Basic MkDocs Commands ==="
-          try {
-            Write-Host "Testing mkdocs version:"
-            python -m mkdocs --version
-            Write-Host "Testing mkdocs help (first few lines):"
-            python -m mkdocs --help 2>&1 | Select-Object -First 10 | ForEach-Object { Write-Host $_ }
-          } catch {
-            Write-Host "Command failed: $($_.Exception.Message)"
-          }
+          
+          Write-Host "Testing mkdocs version:"
+          & python -m mkdocs --version
+          Write-Host "Version test completed with exit code: $LASTEXITCODE"
+          
+          Write-Host "`nTesting mkdocs help (first few lines):"
+          $helpOutput = & python -m mkdocs --help 2>&1
+          $helpOutput | Select-Object -First 10 | ForEach-Object { Write-Host $_ }
+          Write-Host "Help test completed with exit code: $LASTEXITCODE"
+          
+          Write-Host "`nMkDocs commands test completed successfully!"
 
       - name: Test YAML Parsing
         shell: powershell
@@ -52,14 +55,18 @@ jobs:
           Write-Host "=== Testing Python YAML parsing ==="
           
           # ایجاد فایل Python موقت برای تست
-          $pythonScript = "import yaml`nimport sys`nsys.stdout.reconfigure(encoding='utf-8')`nwith open('mkdocs.yml', 'r', encoding='utf-8') as f:`n    config = yaml.safe_load(f)`n    print('YAML parsing successful!')`n    print('Site name:', config.get('site_name', 'Not found'))`n    print('Theme name:', config.get('theme', {}).get('name', 'Not found'))"
+          $pythonScript = @"import yaml
+           import sys
+           sys.stdout.reconfigure(encoding='utf-8')
+           with open('mkdocs.yml', 'r', encoding='utf-8') as f:
+           config = yaml.safe_load(f)
+           print('YAML parsing successful!')
+           print('Site name:', config.get('site_name', 'Not found'))
+           print('Theme name:', config.get('theme', {}).get('name', 'Not found'))"@
           $pythonScript | Out-File -FilePath "test_yaml.py" -Encoding UTF8
           
-          try {
-            python test_yaml.py 2>&1 | ForEach-Object { Write-Host $_ }
-          } catch {
-            Write-Host "Python YAML test failed: $($_.Exception.Message)"
-          }
+          & python test_yaml.py
+          Write-Host "YAML parsing test completed with exit code: $LASTEXITCODE"
           
           Remove-Item "test_yaml.py" -ErrorAction SilentlyContinue
 
@@ -70,10 +77,6 @@ jobs:
           
           Write-Host "=== Creating Minimal Test Configuration ==="
           
-          # ایجاد فایل کانفیگ ساده
-          $minimalConfig = "site_name: Test Site`ntheme:`n  name: material"
-          $minimalConfig | Out-File -FilePath "mkdocs_test.yml" -Encoding UTF8
-          
           # ایجاد پوشه docs با فایل index
           if (-not (Test-Path "docs_test")) {
             New-Item -ItemType Directory -Name "docs_test" -Force
@@ -81,33 +84,32 @@ jobs:
           }
           
           # اضافه کردن docs directory به کانفیگ
-          $fullMinimalConfig = "site_name: Test Site`ndocs_dir: docs_test`ntheme:`n  name: material"
+          $fullMinimalConfig = @"
+          site_name: Test Site
+          docs_dir: docs_test
+          theme:
+          name: material"@
           $fullMinimalConfig | Out-File -FilePath "mkdocs_test.yml" -Encoding UTF8
           
           Write-Host "Minimal config content:"
           Get-Content "mkdocs_test.yml" | ForEach-Object { Write-Host "  $_" }
           
           Write-Host "`nTesting with minimal configuration:"
-          try {
-            $output = python -m mkdocs build --config-file mkdocs_test.yml --verbose 2>&1
-            $exitCode = $LASTEXITCODE
-            
-            Write-Host "Exit Code: $exitCode"
-            Write-Host "Output:"
-            $output | ForEach-Object { Write-Host "  $_" }
-            
-            if ($exitCode -eq 0) {
-              Write-Host "Minimal config test PASSED"
-              if (Test-Path "site") {
-                Write-Host "Site directory created for minimal test"
-                Remove-Item -Path "site" -Recurse -Force -ErrorAction SilentlyContinue
-              }
-            } else {
-              Write-Host "Minimal config test FAILED with exit code: $exitCode"
+          $output = & python -m mkdocs build --config-file mkdocs_test.yml --verbose 2>&1
+          $exitCode = $LASTEXITCODE
+          
+          Write-Host "Exit Code: $exitCode"
+          Write-Host "Output:"
+          $output | ForEach-Object { Write-Host "  $_" }
+          
+          if ($exitCode -eq 0) {
+            Write-Host "Minimal config test PASSED"
+            if (Test-Path "site") {
+              Write-Host "Site directory created for minimal test"
+              Remove-Item -Path "site" -Recurse -Force -ErrorAction SilentlyContinue
             }
-            
-          } catch {
-            Write-Host "Minimal config test failed with exception: $($_.Exception.Message)"
+          } else {
+            Write-Host "Minimal config test FAILED with exit code: $exitCode"
           }
           
           # پاکسازی فایل‌های تست
@@ -163,40 +165,35 @@ jobs:
           
           Write-Host "Running mkdocs build with verbose output..."
           
-          try {
-            # اجرای دستور و گرفتن خروجی
-            $buildOutput = python -m mkdocs build --clean --verbose 2>&1
-            $exitCode = $LASTEXITCODE
-            
-            Write-Host "Process exit code: $exitCode"
-            Write-Host "`nBuild Output:"
-            $buildOutput | ForEach-Object { Write-Host "  $_" }
-            
-            if ($exitCode -eq 0) {
-              Write-Host "`n=== Build Successful ==="
-              if (Test-Path "site") {
-                Write-Host "Site directory created successfully"
-                
-                # نمایش ساختار اصلی سایت
-                Write-Host "`nSite structure:"
-                Get-ChildItem -Path "site" | Select-Object Name, Length | Format-Table -AutoSize
-                
-                # بررسی پوشه fa
-                if (Test-Path "site\fa") {
-                  Write-Host "`nFA directory contents:"
-                  Get-ChildItem -Path "site\fa" | Select-Object Name, Length | Format-Table -AutoSize
-                } else {
-                  Write-Host "`nFA directory not created - using default site directory"
-                }
+          # اجرای دستور و گرفتن خروجی
+          $buildOutput = & python -m mkdocs build --clean --verbose 2>&1
+          $exitCode = $LASTEXITCODE
+          
+          Write-Host "Process exit code: $exitCode"
+          Write-Host "`nBuild Output:"
+          $buildOutput | ForEach-Object { Write-Host "  $_" }
+          
+          if ($exitCode -eq 0) {
+            Write-Host "`n=== Build Successful ==="
+            if (Test-Path "site") {
+              Write-Host "Site directory created successfully"
+              
+              # نمایش ساختار اصلی سایت
+              Write-Host "`nSite structure:"
+              Get-ChildItem -Path "site" | Select-Object Name, Length | Format-Table -AutoSize
+              
+              # بررسی پوشه fa
+              if (Test-Path "site\fa") {
+                Write-Host "`nFA directory contents:"
+                Get-ChildItem -Path "site\fa" | Select-Object Name, Length | Format-Table -AutoSize
+              } else {
+                Write-Host "`nFA directory not created - using default site directory"
               }
-            } else {
-              Write-Host "`n=== Build Failed ==="
-              Write-Host "Exit code: $exitCode"
-              throw "Build failed with exit code $exitCode"
             }
-          } catch {
-            Write-Host "Build failed with exception: $($_.Exception.Message)"
-            throw
+          } else {
+            Write-Host "`n=== Build Failed ==="
+            Write-Host "Exit code: $exitCode"
+            exit $exitCode
           }
 
       - name: Deploy to IIS
