--- a/.github/workflows/deploy-mkdocs.yml
+++ b/.github/workflows/deploy-mkdocs.yml
@@ -1,4 +1,4 @@
-name: Deploy MkDocs to IIS - Deploy Fixed V7
+name: Deploy MkDocs to IIS - Deploy Fixed V8
 
 on:
   push:
@@ -249,33 +249,10 @@ jobs:
             exit $buildExitCode
           }
 
-      - name: Stop IIS Application Pool (if exists)
+      - name: Complete IIS Management and Deploy
         shell: powershell
         run: |
-          Write-Host "=== Stopping IIS Application Pool ==="
-          try {
-            Import-Module WebAdministration -ErrorAction SilentlyContinue
-            
-            # بررسی وجود Application Pool
-            $appPoolName = "webkesht_docs"
-            if (Get-IISAppPool -Name $appPoolName -ErrorAction SilentlyContinue) {
-              Write-Host "Stopping Application Pool: $appPoolName"
-              Stop-WebAppPool -Name $appPoolName -ErrorAction SilentlyContinue
-              Start-Sleep -Seconds 3
-              Write-Host "Application Pool stopped"
-            } else {
-              Write-Host "Application Pool $appPoolName not found - skipping"
-            }
-          }
-          catch {
-            Write-Host "Warning: Could not manage IIS Application Pool: $($_.Exception.Message)"
-            Write-Host "Continuing with deployment..."
-          }
-
-      - name: Deploy to IIS
-        shell: powershell
-        run: |
-          Write-Host "=== Starting Deployment ==="
+          Write-Host "=== Complete IIS Management and Deployment ==="
           $targetPath = "C:\inetpub\wwwroot\webkesht_docs"
           
           # تشخیص مسیر صحیح source
@@ -289,153 +266,259 @@ jobs:
 
           Write-Host "Deploying from '$sourcePath' to '$targetPath'..."
 
+          # === مرحله 1: مدیریت IIS ===
+          Write-Host "`n=== Step 1: IIS Management ==="
+          try {
+            Import-Module WebAdministration -ErrorAction SilentlyContinue
+            
+            # توقف Application Pool
+            $appPoolName = "webkesht_docs"
+            $appPoolExists = Get-IISAppPool -Name $appPoolName -ErrorAction SilentlyContinue
+            
+            if ($appPoolExists) {
+              Write-Host "Stopping Application Pool: $appPoolName"
+              Stop-WebAppPool -Name $appPoolName -ErrorAction SilentlyContinue
+              
+              # انتظار برای اطمینان از توقف کامل
+              $maxWait = 30
+              $waitCount = 0
+              do {
+                Start-Sleep -Seconds 1
+                $waitCount++
+                $poolState = (Get-IISAppPool -Name $appPoolName -ErrorAction SilentlyContinue).State
+                Write-Host "Pool state: $poolState (wait: $waitCount/$maxWait)"
+              } while ($poolState -ne "Stopped" -and $waitCount -lt $maxWait)
+              
+              if ($poolState -eq "Stopped") {
+                Write-Host "✅ Application Pool stopped successfully"
+              } else {
+                Write-Host "⚠️  Application Pool may not be fully stopped"
+              }
+            } else {
+              Write-Host "Application Pool $appPoolName not found"
+            }
+            
+            # توقف IIS Site (اگر وجود دارد)
+            $siteName = "webkesht_docs"
+            $site = Get-IISSite -Name $siteName -ErrorAction SilentlyContinue
+            if ($site) {
+              Write-Host "Stopping IIS Site: $siteName"
+              Stop-IISSite -Name $siteName -ErrorAction SilentlyContinue
+              Start-Sleep -Seconds 3
+              Write-Host "IIS Site stopped"
+            }
+            
+          } catch {
+            Write-Host "⚠️  IIS management error: $($_.Exception.Message)"
+            Write-Host "Continuing with deployment..."
+          }
+
+          # === مرحله 2: مدیریت دسترسی‌ها ===
+          Write-Host "`n=== Step 2: Permission Management ==="
+          
           # ایجاد target directory در صورت عدم وجود
           if (-not (Test-Path $targetPath)) {
             Write-Host "Creating target directory..."
             New-Item -ItemType Directory -Force -Path $targetPath
           }
+          
+          try {
+            # تنظیم مجوزهای کامل برای کاربر جاری
+            $currentUser = [System.Security.Principal.WindowsIdentity]::GetCurrent().Name
+            Write-Host "Setting full permissions for user: $currentUser"
+            
+            icacls $targetPath /grant "${currentUser}:(OI)(CI)F" /T /C /Q
+            
+            # تنظیم مجوزهای IIS Users
+            icacls $targetPath /grant "IIS_IUSRS:(OI)(CI)F" /T /C /Q
+            icacls $targetPath /grant "IUSR:(OI)(CI)F" /T /C /Q
+            
+            Write-Host "✅ Permissions set successfully"
+          } catch {
+            Write-Host "⚠️  Permission setting error: $($_.Exception.Message)"
+            Write-Host "Continuing with deployment..."
+          }
 
-          Write-Host "Cleaning target directory with retry mechanism..."
-          $maxRetries = 3
-          $retryCount = 0
+          # === مرحله 3: پاکسازی قوی ===
+          Write-Host "`n=== Step 3: Aggressive Cleanup ==="
+          
+          $maxCleanupRetries = 5
+          $cleanupAttempt = 0
           $cleanSuccess = $false
           
-          while ($retryCount -lt $maxRetries -and -not $cleanSuccess) {
+          while ($cleanupAttempt -lt $maxCleanupRetries -and -not $cleanSuccess) {
+            $cleanupAttempt++
+            Write-Host "Cleanup attempt $cleanupAttempt of $maxCleanupRetries..."
+            
             try {
-              $retryCount++
-              Write-Host "Cleanup attempt $retryCount..."
+              # بررسی وجود process هایی که ممکن است فایل‌ها را در اختیار داشته باشند
+              $processes = Get-Process | Where-Object { $_.ProcessName -like "*w3wp*" -or $_.ProcessName -like "*iis*" }
+              if ($processes) {
+                Write-Host "Found IIS-related processes, attempting graceful shutdown..."
+                foreach ($proc in $processes) {
+                  try {
+                    $proc.CloseMainWindow()
+                    Start-Sleep -Seconds 1
+                  } catch {
+                    Write-Host "Could not close process $($proc.ProcessName)"
+                  }
+                }
+                Start-Sleep -Seconds 3
+              }
               
-              # پاکسازی با force و ignore errors
-              Get-ChildItem -Path $targetPath -Recurse -ErrorAction SilentlyContinue | 
-                Remove-Item -Force -Recurse -ErrorAction SilentlyContinue
+              # پاکسازی با استفاده از PowerShell cmdlets
+              if (Test-Path $targetPath) {
+                Get-ChildItem -Path $targetPath -Recurse -Force -ErrorAction SilentlyContinue | 
+                  ForEach-Object {
+                    try {
+                      if ($_.PSIsContainer) {
+                        Remove-Item $_.FullName -Recurse -Force -ErrorAction Stop
+                      } else {
+                        # تلاش برای حذف فایل با تنظیم attributes
+                        $_.Attributes = [System.IO.FileAttributes]::Normal
+                        Remove-Item $_.FullName -Force -ErrorAction Stop
+                      }
+                    } catch {
+                      Write-Host "Failed to remove: $($_.FullName)"
+                    }
+                  }
+              }
               
-              # بررسی اینکه آیا پاکسازی موفق بوده
-              $remainingFiles = Get-ChildItem -Path $targetPath -Recurse -ErrorAction SilentlyContinue
-              if ($remainingFiles.Count -eq 0) {
+              # بررسی موفقیت پاکسازی
+              $remainingItems = Get-ChildItem -Path $targetPath -Recurse -Force -ErrorAction SilentlyContinue
+              if ($remainingItems.Count -eq 0) {
                 $cleanSuccess = $true
                 Write-Host "✅ Directory cleaned successfully"
               } else {
-                Write-Host "⚠️  $($remainingFiles.Count) files remain - retrying..."
-                Start-Sleep -Seconds 2
+                Write-Host "⚠️  $($remainingItems.Count) items remain, retrying..."
+                Start-Sleep -Seconds 5
               }
-            }
-            catch {
-              Write-Host "⚠️  Cleanup attempt $retryCount failed: $($_.Exception.Message)"
-              if ($retryCount -lt $maxRetries) {
-                Start-Sleep -Seconds 3
-              }
+              
+            } catch {
+              Write-Host "⚠️  Cleanup attempt failed: $($_.Exception.Message)"
+              Start-Sleep -Seconds 5
             }
           }
           
           if (-not $cleanSuccess) {
-            Write-Host "⚠️  Complete cleanup failed, but continuing with deployment..."
+            Write-Host "⚠️  Complete cleanup failed, but continuing..."
           }
 
-          Write-Host "Copying files with error handling..."
-          $copySuccess = $false
-          $copyRetries = 3
-          $copyAttempt = 0
+          # === مرحله 4: کپی هوشمند ===
+          Write-Host "`n=== Step 4: Smart Copy Operation ==="
           
-          while ($copyAttempt -lt $copyRetries -and -not $copySuccess) {
+          $copySuccess = $false
+          $maxCopyRetries = 3
+          
+          for ($copyAttempt = 1; $copyAttempt -le $maxCopyRetries; $copyAttempt++) {
+            Write-Host "Copy attempt $copyAttempt of $maxCopyRetries..."
+            
             try {
-              $copyAttempt++
-              Write-Host "Copy attempt $copyAttempt..."
+              # استفاده از robocopy برای کپی قدرتمند
+              Write-Host "Using ROBOCOPY for reliable file copying..."
               
-              # کپی کردن فایل‌ها با retry mechanism
-              Copy-Item -Path "$sourcePath\*" -Destination $targetPath -Recurse -Force -ErrorAction Stop
-              $copySuccess = $true
-              Write-Host "✅ Files copied successfully"
-            }
-            catch {
-              Write-Host "⚠️  Copy attempt $copyAttempt failed: $($_.Exception.Message)"
-              if ($copyAttempt -lt $copyRetries) {
-                Write-Host "Waiting before retry..."
-                Start-Sleep -Seconds 5
+              $robocopyArgs = @(
+                "`"$sourcePath`"",
+                "`"$targetPath`"",
+                "/E",           # کپی subdirectories (شامل خالی‌ها)
+                "/R:3",         # 3 retry
+                "/W:5",         # 5 second wait between retries
+                "/MT:4",        # multi-threaded
+                "/NFL",         # No File List
+                "/NDL",         # No Directory List
+                "/NP"           # No Progress
+              )
+              
+              $robocopyCmd = "robocopy " + ($robocopyArgs -join " ")
+              Write-Host "Running: $robocopyCmd"
+              
+              $robocopyResult = & cmd.exe /c $robocopyCmd
+              $robocopyExitCode = $LASTEXITCODE
+              
+              # ROBOCOPY exit codes: 0=no files copied, 1=files copied successfully, 2=extra files/dirs deleted
+              if ($robocopyExitCode -le 7) {
+                Write-Host "✅ ROBOCOPY completed with exit code: $robocopyExitCode"
+                $copySuccess = $true
+                break
               } else {
-                Write-Host "❌ All copy attempts failed!"
-                
-                # تلاش برای کپی فایل به فایل
-                Write-Host "Trying individual file copy as fallback..."
-                try {
-                  $sourceFiles = Get-ChildItem -Path $sourcePath -Recurse -File
-                  $successCount = 0
-                  $failCount = 0
-                  
-                  foreach ($file in $sourceFiles) {
-                    $relativePath = $file.FullName.Substring($sourcePath.Length + 1)
-                    $targetFile = Join-Path $targetPath $relativePath
-                    $targetDir = Split-Path $targetFile -Parent
-                    
-                    try {
-                      if (-not (Test-Path $targetDir)) {
-                        New-Item -ItemType Directory -Path $targetDir -Force -ErrorAction SilentlyContinue
-                      }
-                      
-                      Copy-Item -Path $file.FullName -Destination $targetFile -Force -ErrorAction Stop
-                      $successCount++
-                    }
-                    catch {
-                      Write-Host "❌ Failed to copy: $relativePath - $($_.Exception.Message)"
-                      $failCount++
-                    }
-                  }
-                  
-                  Write-Host "Individual copy results: $successCount succeeded, $failCount failed"
-                  if ($successCount -gt 0) {
-                    $copySuccess = $true
-                  }
+                Write-Host "❌ ROBOCOPY failed with exit code: $robocopyExitCode"
+                if ($copyAttempt -lt $maxCopyRetries) {
+                  Write-Host "Retrying in 10 seconds..."
+                  Start-Sleep -Seconds 10
                 }
-                catch {
-                  Write-Host "❌ Individual file copy also failed: $($_.Exception.Message)"
-                }
+              }
+              
+            } catch {
+              Write-Host "❌ Copy attempt $copyAttempt failed: $($_.Exception.Message)"
+              if ($copyAttempt -lt $maxCopyRetries) {
+                Start-Sleep -Seconds 10
               }
             }
           }
           
+          # اگر robocopy شکست خورد، استفاده از PowerShell fallback
           if (-not $copySuccess) {
-            Write-Host "❌ Deployment failed - could not copy files"
+            Write-Host "ROBOCOPY failed, trying PowerShell copy as fallback..."
+            try {
+              Copy-Item -Path "$sourcePath\*" -Destination $targetPath -Recurse -Force -ErrorAction Stop
+              $copySuccess = $true
+              Write-Host "✅ PowerShell copy succeeded"
+            } catch {
+              Write-Host "❌ PowerShell copy also failed: $($_.Exception.Message)"
+            }
+          }
+
+          # === مرحله 5: بررسی نتیجه ===
+          Write-Host "`n=== Step 5: Deployment Verification ==="
+          
+          if ($copySuccess) {
+            try {
+              $deployedFiles = Get-ChildItem -Path $targetPath -Recurse -File -ErrorAction SilentlyContinue
+              Write-Host "✅ Deployment successful!"
+              Write-Host "Total files deployed: $($deployedFiles.Count)"
+              
+              # بررسی فایل‌های کلیدی
+              $keyFiles = @("index.html", "assets", "search")
+              foreach ($keyFile in $keyFiles) {
+                $keyPath = Join-Path $targetPath $keyFile
+                if (Test-Path $keyPath) {
+                  Write-Host "✅ Key component exists: $keyFile"
+                } else {
+                  Write-Host "⚠️  Key component missing: $keyFile"
+                }
+              }
+            } catch {
+              Write-Host "⚠️  Could not verify deployment: $($_.Exception.Message)"
+            }
+          } else {
+            Write-Host "❌ Deployment failed completely"
             exit 1
           }
 
-          Write-Host "`n=== Deployment Verification ==="
+          # === مرحله 6: راه‌اندازی مجدد IIS ===
+          Write-Host "`n=== Step 6: Restart IIS Services ==="
           try {
-            $deployedFiles = Get-ChildItem -Path $targetPath -Recurse -File -ErrorAction SilentlyContinue
-            Write-Host "Total files deployed: $($deployedFiles.Count)"
-            
-            # بررسی فایل‌های کلیدی
-            $keyFiles = @("index.html", "assets", "search")
-            foreach ($keyFile in $keyFiles) {
-              $keyPath = Join-Path $targetPath $keyFile
-              if (Test-Path $keyPath) {
-                Write-Host "✅ Key component exists: $keyFile"
-              } else {
-                Write-Host "⚠️  Key component missing: $keyFile"
-              }
-            }
-          }
-          catch {
-            Write-Host "⚠️  Could not verify deployment: $($_.Exception.Message)"
-          }
-
-      - name: Start IIS Application Pool
-        shell: powershell
-        run: |
-          Write-Host "=== Starting IIS Application Pool ==="
-          try {
-            Import-Module WebAdministration -ErrorAction SilentlyContinue
-            
-            $appPoolName = "webkesht_docs"
-            if (Get-IISAppPool -Name $appPoolName -ErrorAction SilentlyContinue) {
+            # شروع مجدد Application Pool
+            if ($appPoolExists) {
               Write-Host "Starting Application Pool: $appPoolName"
               Start-WebAppPool -Name $appPoolName -ErrorAction SilentlyContinue
-              Start-Sleep -Seconds 2
+              Start-Sleep -Seconds 3
               
-              $poolState = (Get-IISAppPool -Name $appPoolName).State
-              Write-Host "Application Pool state: $poolState"
+              $poolState = (Get-IISAppPool -Name $appPoolName -ErrorAction SilentlyContinue).State
+              Write-Host "Application Pool state after start: $poolState"
             }
-          }
-          catch {
-            Write-Host "Warning: Could not start IIS Application Pool: $($_.Exception.Message)"
+            
+            # شروع مجدد IIS Site
+            if ($site) {
+              Write-Host "Starting IIS Site: $siteName"
+              Start-IISSite -Name $siteName -ErrorAction SilentlyContinue
+              Start-Sleep -Seconds 2
+              Write-Host "IIS Site started"
+            }
+            
+            Write-Host "✅ IIS services restarted"
+          } catch {
+            Write-Host "⚠️  IIS restart error: $($_.Exception.Message)"
           }
           
-          Write-Host "✅ Deployment process completed!"
+          Write-Host "`n🎉 Complete deployment process finished!"
