--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,44 +1,107 @@
-# اطلاعات کلی سایت (می‌تواند فارسی باشد)
+# اطلاعات کلی سایت
 site_name: مستندات وب‌کشت
-site_url: https://example.com/
-site_description: 'مستندات جامع برای محصولات و خدمات وب‌کشت'
+site_url: https://docs.webkesht.com/
+site_description: 'مستندات جامع سامانه هوشمند مدیریت و آبیاری وب‌کشت'
 site_author: 'تیم وب‌کشت'
 
-# مسیر خروجی build را به پوشه /fa تغییر می‌دهیم
-# این مهم‌ترین بخش است!
+# مسیر خروجی
 site_dir: site/fa
 
-# تنظیمات پوسته برای زبان فارسی
+# تنظیمات پوسته
 theme:
   name: material
-  language: fa  # <--- زبان فارسی برای فعال‌سازی RTL
+  language: fa
   custom_dir: overrides
   features:
     - navigation.tabs
     - navigation.tabs.sticky
     - navigation.top
     - navigation.footer
+    - navigation.sections
+    - navigation.expand
     - search.highlight
-    #- content.code.annotate
-    #- content.tabs.link
+    - search.suggest
+    - search.share
+    - content.code.copy
+    - toc.integrate
+  
   font:
     text: Vazirmatn
-    code: Roboto Mono
+    code: 'Fira Code'
+  
   palette:
-    - scheme: default
+    - media: "(prefers-color-scheme: light)"
+      scheme: default
+      primary: indigo
+      accent: indigo
       toggle:
         icon: material/brightness-7
         name: تغییر به حالت تاریک
-    - scheme: slate
+    - media: "(prefers-color-scheme: dark)"
+      scheme: slate
+      primary: indigo
+      accent: indigo
       toggle:
         icon: material/brightness-4
         name: تغییر به حالت روشن
+  
+  icon:
+    logo: material/leaf
+  
+  favicon: images/favicon.png
 
+# CSS سفارشی
 extra_css:
   - stylesheets/custom.css
 
+# تنظیمات اضافی
+extra:
+  social:
+    - icon: fontawesome/brands/telegram
+      link: https://t.me/webkesht
+    - icon: fontawesome/brands/instagram  
+      link: https://instagram.com/webkesht
+    - icon: fontawesome/solid/envelope
+      link: mailto:support@webkesht.com
+
+# پلاگین‌ها (ساده شده)
 plugins:
-  - search
-  - blog
+  - search:
+      separator: '[\s\-\.]+'
+  - blog:
+      blog_dir: blog
   - meta:
-       meta_file: .meta.yml
+      meta_file: .meta.yml
+
+# افزونه‌های مارک‌داون ضروری
+markdown_extensions:
+  - attr_list
+  - md_in_html
+  - pymdownx.emoji:
+      emoji_index: !!python/name:materialx.emoji.twemoji
+      emoji_generator: !!python/name:materialx.emoji.to_svg
+  - admonition
+  - pymdownx.details
+  - pymdownx.superfences
+  - pymdownx.tabbed:
+      alternate_style: true
+  - pymdownx.highlight:
+      anchor_linenums: true
+  - pymdownx.inlinehilite
+  - pymdownx.tasklist:
+      custom_checkbox: true
+  - tables
+
+# ساختار ناوبری
+nav:
+  - خانه: index.md
+  - شروع سریع:
+    - quick-start/index.md
+    - نصب و راه‌اندازی: quick-start/installation.md
+  - راهنمای کاربری:
+    - user-guide/index.md
+    - مدیریت زمین‌ها: user-guide/land-management.md
+  - وبلاگ:
+    - blog/index.md
+  - پشتیبانی:
+    - support/index.md
